syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "trb_officer_backend";

package api;

service ApiService {

  //  Users
  rpc GetClientList (GetClientListRequest) returns (GetClientListReply);
  rpc GetOfficerList (GetOfficerListRequest) returns (GetOfficerListReply);
  rpc CreateClient (CreateClientRequest) returns (CreateClientReply);
  rpc CreateOfficer (CreateOfficerRequest) returns (CreateOfficerReply);

  // Bank Accounts
  rpc GetAccountList (GetAccountListRequest) returns (GetAccountListReply);
  rpc GetAccount (GetAccountRequest) returns (GetAccountReply);

  // Loans
  rpc GetLoanList (GetLoanListRequest) returns (GetLoanListReply);
  rpc CreateLoan (CreateLoanRequest) returns (CreateLoanReply);

  // Applications
  rpc GetApplicationList (GetApplicationListRequest) returns (GetApplicationListReply);
  rpc GetApplication (GetApplicationRequest) returns (GetApplicationReply);

  // Rates
  rpc GetRateList (GetRateListRequest) returns (GetRateListReply);
  rpc CreateRate (CreateRateRequest) returns (CreateRateReply);
}

// Users
message GetClientListRequest{}
message GetClientListReply{
  repeated UserShort clients = 1;
}

message GetOfficerListRequest{}
message GetOfficerListReply{
  repeated UserShort officers = 1;
}

message CreateClientRequest{
  string firstName = 1;
  string lastName = 2;
  string patronymic = 3;
  string phoneNumber = 4;
  string address = 5;
  string passportNumber = 6;
  string passportSeries = 7;
  string email = 8;
  string password = 9;
}
message CreateClientReply{
  optional string error = 1;
}

message CreateOfficerRequest{
  string firstName = 1;
  string lastName = 2;
  string patronymic = 3;
  string phoneNumber = 4;
  string address = 5;
  string passportNumber = 6;
  string passportSeries = 7;
  string email = 8;
  string password = 9;
}
message CreateOfficerReply{
  optional string error = 1;
}


// Bank Accounts
message GetAccountListRequest{
  string userId = 1;
}
message GetAccountListReply{
  repeated AccountShort accounts = 1;
}

message GetAccountRequest{
  string accountId = 1;
}
message GetAccountReply{
  Account account = 1;
}


// Loans
message GetLoanListRequest{}
message GetLoanListReply{}

message CreateLoanRequest{}
message CreateLoanReply{}

// Applications
message GetApplicationListRequest{}
message GetApplicationListReply{}

message GetApplicationRequest{}
message GetApplicationReply{}


// Rates
message GetRateListRequest{}
message GetRateListReply{}

message CreateRateRequest{}
message CreateRateReply{}


// ...
// ...
// ...

message UserShort{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string birthDate = 4;
}

message AccountShort{
  string id = 1;
  int64 balance = 2;
}

message Account{
  string id = 1;
  google.protobuf.Timestamp creationDate = 2;
  google.protobuf.Timestamp closingDate = 3;
  int64 balance = 4;
  string ownerFullName = 5;
  Client owner = 6;
}

message Client{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string patronymic = 4;
  string phoneNumber = 5;
  string address = 6;
  string passportNumber = 7;
  string passportSeries = 8;
  string email = 9;
  bool isBlocked = 10;
  optional Officer whoBlocked = 11;
  Officer whoCreated = 12;
}

message Officer{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string patronymic = 4;
  string phoneNumber = 5;
  string address = 6;
  string passportNumber = 7;
  string passportSeries = 8;
  string email = 9;
  bool isBlocked = 10;
  optional Officer whoBlocked = 11;
  Officer whoCreated = 12;
}